Fix scrolling bug on iOS

--- a/src/styles/components/notes.scss
+++ b/src/styles/components/notes.scss
@@ -1,5 +1,7 @@
 .notes-container {
     min-height: calc(100vh - 3.6rem);
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
     
     .notes-list {
         background: $sidebar-bg;
